src/objects/OrderApi__Sales_Order__c.object
<CustomObject>
    <description>Sales Orders are the primary object for all sales related transactions.</description>
    <fields>
        <fullName>DonorApi__Acknowledged_Date__c</fullName>
        <description>The date a gift was acknowledged.</description>
        <inlineHelpText>The date a gift was acknowledged.</inlineHelpText>
        <label>Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Acknowledgement_Method__c</fullName>
        <description>Select the method of acknowledgement for the gift.</description>
        <inlineHelpText>Select the method of acknowledgement for the gift.</inlineHelpText>
        <label>Acknowledgement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not acknowledge this gift. When checked, the &quot;Is Gift Acknowledged&quot; flag will be unable to be checked and cause a validation message to display to the user.</description>
        <inlineHelpText>Do not acknowledge this gift. When checked, the &quot;Is Gift Acknowledged&quot; flag will be unable to be checked and cause a validation message to display to the user.</inlineHelpText>
        <label>Do Not Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Forecast_Category__c</fullName>
        <description>**Required** Select the category forecast category for the gift opportunity, used to classify the gift opportunities by best case, committed, open, won, lost, and on hold.</description>
        <inlineHelpText>**Required** Select the category forecast category for the gift opportunity, used to classify the gift opportunities by best case, committed, open, won, lost, and on hold.</inlineHelpText>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Comitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Forecasted_Amount__c</fullName>
        <description>**Required** The initial forecasted gift amount for the opportunity. This field is only editable when gift opportunities are created.</description>
        <inlineHelpText>**Required** The initial forecasted gift amount for the opportunity. This field is only editable when gift opportunities are created.</inlineHelpText>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Forecasted_Close_Date__c</fullName>
        <description>**Required** The date the gift opportunity is projected to close.</description>
        <inlineHelpText>**Required** The date the gift opportunity is projected to close.</inlineHelpText>
        <label>Forecasted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Match_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that is matching the gift on the linked gift match opportunity record.</description>
        <inlineHelpText>The account that is matching the gift on the linked gift match opportunity record.</inlineHelpText>
        <label>Gift Match Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders (Gift Match Account)</relationshipLabel>
        <relationshipName>Matched_Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Match_Amount__c</fullName>
        <description>The amount of the gift that will be matched.</description>
        <inlineHelpText>The amount of the gift that will be matched.</inlineHelpText>
        <label>Gift Match Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Match_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact related to the linked gift match opportunity.</description>
        <label>Gift Match Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Matched_Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Matching_Company__c</fullName>
        <label>Gift Matching Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Type__c</fullName>
        <label>Gift Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Gift</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Planned Giving</fullName>
                </value>
                <value>
                    <fullName>Corporate Gift Match</fullName>
                </value>
                <value>
                    <fullName>Personal Gift Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_LOI_Submitted__c</fullName>
        <description>Date the LOI was submitted for the grant.</description>
        <inlineHelpText>Date the LOI was submitted for the grant.</inlineHelpText>
        <label>Grant LOI Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_Open_Date__c</fullName>
        <description>The date the foundation started accepting applications for the grant.</description>
        <inlineHelpText>The date the foundation started accepting applications for the grant.</inlineHelpText>
        <label>Grant Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_Proposal_Deadline__c</fullName>
        <description>Date the proposal is due for the grant.</description>
        <inlineHelpText>Date the proposal is due for the grant.</inlineHelpText>
        <label>Grant Proposal Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_Proposal_Response_Date__c</fullName>
        <description>The date the foundation accepted/rejected the grant proposal.</description>
        <inlineHelpText>The date the foundation accepted/rejected the grant proposal.</inlineHelpText>
        <label>Grant Proposal Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_Proposal_Submitted__c</fullName>
        <description>The date the proposal was submitted for the grant.</description>
        <inlineHelpText>The date the proposal was submitted for the grant.</inlineHelpText>
        <label>Grant Proposal Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Grant_Term__c</fullName>
        <description>Enter the term in months for the grant.</description>
        <inlineHelpText>Enter the term in months for the grant.</inlineHelpText>
        <label>Grant Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Is_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary indicator for the acknowledgement status for the gift.</description>
        <inlineHelpText>Primary indicator for the acknowledgement status for the gift.</inlineHelpText>
        <label>Is Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Is_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated/Override** Checked when the value of the Fundraising Preferences custom setting field &quot;Gift Opportunity Closed Won Stages&quot; for the running user matches the stage of the record, otherwise the field is unchecked.</description>
        <inlineHelpText>**System Calculated/Override** Checked when the value of the Fundraising Preferences custom setting field &quot;Gift Opportunity Closed Won Stages&quot; for the running user matches the stage of the record, otherwise the field is unchecked.</inlineHelpText>
        <label>Is Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Source__c</fullName>
        <description>Select the option that best describes the source of the gift opportunity record from the list of provided values.</description>
        <inlineHelpText>Select the option that best describes the source of the gift opportunity record from the list of provided values.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Fundraiser</fullName>
                </value>
                <value>
                    <fullName>Personal Solicitation</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Stage__c</fullName>
        <description>**Required** Dependent picklist for the Pipeline Category picklist field used for more specific categorization of opportunities.</description>
        <inlineHelpText>**Required** Dependent picklist for the Pipeline Category picklist field used for more specific categorization of opportunities.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DonorApi__Gift_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Major Gift - Cultivating</fullName>
                </value>
                <value>
                    <fullName>Major Gift - Soliciting</fullName>
                </value>
                <value>
                    <fullName>Major Gift - On Hold</fullName>
                </value>
                <value>
                    <fullName>Major Gift - Won</fullName>
                </value>
                <value>
                    <fullName>Major Gift - Lost</fullName>
                </value>
                <value>
                    <fullName>Gift Match - Pending Submission</fullName>
                </value>
                <value>
                    <fullName>Gift Match - Submitted</fullName>
                </value>
                <value>
                    <fullName>Gift Match - Confirmed</fullName>
                </value>
                <value>
                    <fullName>Gift Match - Received</fullName>
                </value>
                <value>
                    <fullName>Gift Match - Disqualified</fullName>
                </value>
                <value>
                    <fullName>Grant - Researching</fullName>
                </value>
                <value>
                    <fullName>Grant - Developing LOI</fullName>
                </value>
                <value>
                    <fullName>Grant - LOI Submitted</fullName>
                </value>
                <value>
                    <fullName>Grant - Proposal Development</fullName>
                </value>
                <value>
                    <fullName>Grant - Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Grant - Proposal Accepted</fullName>
                </value>
                <value>
                    <fullName>Grant - Proposal Declined</fullName>
                </value>
                <value>
                    <fullName>Planned Gift - Cultivating</fullName>
                </value>
                <value>
                    <fullName>Planned Gift - Soliciting</fullName>
                </value>
                <value>
                    <fullName>Planned Gift - Committed</fullName>
                </value>
                <value>
                    <fullName>Planned Gift - Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Tax_Deductible_Amount__c</fullName>
        <description>**System Calculated** The sum of the tax deductible amount field for related transaction lines.</description>
        <inlineHelpText>**System Calculated** The sum of the tax deductible amount field for related transaction lines.</inlineHelpText>
        <label>Tax Deductible Amount</label>
        <summarizedField>OrderApi__Sales_Order_Line__c.DonorApi__Tax_Deductible_Amount__c</summarizedField>
        <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Honoree__c</fullName>
        <description>The name of the honoree for the tribute.</description>
        <inlineHelpText>The name of the honoree for the tribute.</inlineHelpText>
        <label>Tribute Honoree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Message__c</fullName>
        <description>The custom message the donor wishes to use for the tribute acknowledgement.</description>
        <inlineHelpText>The custom message the donor wishes to use for the tribute acknowledgement.</inlineHelpText>
        <label>Tribute Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_City__c</fullName>
        <description>City used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>City used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Country__c</fullName>
        <description>Country used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Country used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Email__c</fullName>
        <description>Email used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Email used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Method__c</fullName>
        <description>Select the notification method used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Select the notification method used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Phone__c</fullName>
        <description>Phone used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Phone used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Postal_Code__c</fullName>
        <description>Postal Code used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Postal Code used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_State__c</fullName>
        <description>State used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>State used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notification_Street__c</fullName>
        <description>Street used to acknowledge the tribute on the gift record.</description>
        <inlineHelpText>Street used to acknowledge the tribute on the gift record.</inlineHelpText>
        <label>Tribute Notification Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the field when the tribute person to notify has been notified.</description>
        <inlineHelpText>Check the field when the tribute person to notify has been notified.</inlineHelpText>
        <label>Tribute Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Person_to_Notify__c</fullName>
        <description>The person to notify regarding the tribute on the gift record.</description>
        <inlineHelpText>The person to notify regarding the tribute on the gift record.</inlineHelpText>
        <label>Tribute Person to Notify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tribute_Type__c</fullName>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Honor Of</fullName>
                </value>
                <value>
                    <fullName>In Memory of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is2YR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the subscription plan a 2 year term</description>
        <label>Is2YR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complimentary_Journal_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complimentary Journal Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>text(LastModifiedDate)</formula>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marked_For_Delete__c</fullName>
        <formula>AND( NOT(OrderApi__Is_Posted__c), TODAY() - DATEVALUE( CreatedDate ) &gt; 30, ISPICKVAL(OrderApi__Status__c, &apos;Closed&apos;) )</formula>
        <label>Marked For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Membership</label>
        <referenceTo>OfferMembership__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Send_Proforma_Invoice_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked system will send proforma invoice automatically.</description>
        <inlineHelpText>When checked system will send proforma invoice automatically.</inlineHelpText>
        <label>Auto Send Proforma Invoice Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Contact__c</fullName>
        <description>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account or Contact, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Billing_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</inlineHelpText>
        <label>Calculate Billing Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the system will calculate shipping details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s shipping address is used. The contact on the order will populate the shipping contact field.</description>
        <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&apos;s billing address is used. The contact on the order will populate the billing contact field.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Campaign_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Page</label>
        <referenceTo>OrderApi__Campaign_Page__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cancelled_Date__c</fullName>
        <description>The date the contract or subscription was cancelled.</description>
        <inlineHelpText>The date the contract or subscription was cancelled.</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Closed_Date__c</fullName>
        <description>The date the Sales Order was closed.</description>
        <inlineHelpText>The date the Sales Order was closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Closed_Status__c</fullName>
        <description>**System Calculated/Conditional/Override** A status description for &quot;Closed&quot; Sales Orders.</description>
        <inlineHelpText>**System Calculated/Conditional/Override** A status description for &quot;Closed&quot; Sales Orders.</inlineHelpText>
        <label>Closed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
                <value>
                    <fullName>Drafting Payment Schedule</fullName>
                </value>
                <value>
                    <fullName>Scheduled for Payment</fullName>
                </value>
                <value>
                    <fullName>Drafting Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoiced to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Created_by_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a Sales Order was created from the front-end shopping cart.</description>
        <inlineHelpText>Checked when a Sales Order was created from the front-end shopping cart.</inlineHelpText>
        <label>Created by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
        <inlineHelpText>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Reference_Number__c</fullName>
        <description>The customer reference number, typically a purchase order number, included on quotes and invoices generated from the sales order.</description>
        <inlineHelpText>The customer reference number, typically a purchase order number, included on quotes and invoices generated from the sales order.</inlineHelpText>
        <label>Customer Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>The date the Sales Order was created. Default value is today&apos;s date.</description>
        <inlineHelpText>The date the Sales Order was created. Default value is today&apos;s date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Internal facing descriptions will not appear and should not be included in customer-facing communications.</description>
        <inlineHelpText>Internal facing descriptions will not appear and should not be included in customer-facing communications.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>